--- a/thesis.bib
+++ b/thesis.bib
@@ -3256,3 +3256,61 @@ URL = {https://doi.org/10.1137/0216006},
   year={2022},
   publisher={Dunod}
 }
+@book{Breiman_2017,
+	doi = {10.1201/9781315139470},
+	url = {https://doi.org/10.1201%2F9781315139470},
+	year = 2017,
+	month = {oct},
+	publisher = {Routledge},
+	author = {Leo Breiman and Jerome H. Friedman and Richard A. Olshen and Charles J. Stone},
+	title = {Classification And Regression Trees}
+}
+@article{Dension_1998,
+	doi = {10.1093/biomet/85.2.363},
+	url = {https://doi.org/10.1093%2Fbiomet%2F85.2.363},
+	year = 1998,
+	month = {jun},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {85},
+	number = {2},
+	pages = {363--377},
+	author = {D. Dension},
+	title = {A Bayesian {CART} algorithm},
+	journal = {Biometrika}
+}
+@article{Breiman_1996,
+	doi = {10.1007/bf00058655},
+	url = {https://doi.org/10.1007%2Fbf00058655},
+	year = 1996,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {24},
+	number = {2},
+	pages = {123--140},
+	author = {Leo Breiman},
+	title = {Bagging predictors},
+	journal = {Mach Learn}
+}
+@article{Breiman_2001,
+	doi = {10.1023/a:1010933404324},
+	url = {https://doi.org/10.1023%2Fa%3A1010933404324},
+	year = 2001,
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {45},
+	number = {1},
+	pages = {5--32},
+	author = {Leo Breiman},
+	journal = {Machine Learning}
+}
+@article{Tin_Kam_Ho_1998,
+	doi = {10.1109/34.709601},
+	url = {https://doi.org/10.1109%2F34.709601},
+	year = 1998,
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	volume = {20},
+	number = {8},
+	pages = {832--844},
+	author = {Tin Kam Ho},
+	title = {The random subspace method for constructing decision forests},
+	journal = {IEEE Trans. Pattern Anal. Machine Intell.}
+}
